Fix misaligned tags

--- a/_sass/ibug.scss
+++ b/_sass/ibug.scss
@@ -178,8 +178,8 @@ a {
 }
 
 .post-meta {
-	.post-meta-tags {
-		margin-left: 1em;
+	time {
+		margin-right: 1em;
 	}
 }
 
